# Python-Vorkurs

./: main.py  pyproject.toml
Tag 1/: a1.py  a2.py  a3.py
Tag 2/: a1.py  a2.py  a3.py  a3_andereLösung.py  a3_schöneLösung2.py
Tag3/: a1.py  a2.py  covid19-data.csv
Tag4/: a1.py  a2.py  a3.py
Tag5/: a1.py
Tag6/: a1.py  a2.py  a3.py  time_conf.ini
Tag7/: a1.py  a2.py
Tag8/: a1.py
Tag9/: a1.py  a2.py  a3.py  a3opt.py  a4.py  a4anytree.py  deutsch.txt  deutsch2.txt
